--- a/Resources/Views/Memo/Index.en.resx
+++ b/Resources/Views/Memo/Index.en.resx
@@ -135,6 +135,12 @@
   <data name="Create" xml:space="preserve">
     <value>Add a new memo</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Edit</value>
+  </data>
   <data name="First" xml:space="preserve">
     <value>First</value>
   </data>
