--- a/Resources/Views/Memo/_MemoModalPartial.en.resx
+++ b/Resources/Views/Memo/_MemoModalPartial.en.resx
@@ -123,4 +123,13 @@
   <data name="Create Memo" xml:space="preserve">
     <value>Create Memo</value>
   </data>
+  <data name="Note" xml:space="preserve">
+    <value>Note</value>
+  </data>
+  <data name="Tags" xml:space="preserve">
+    <value>Tags</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Title</value>
+  </data>
 </root>
