--- a/Resources/Views/Memo/_MemoModalPartial.sr.resx
+++ b/Resources/Views/Memo/_MemoModalPartial.sr.resx
@@ -123,4 +123,13 @@
   <data name="Create Memo" xml:space="preserve">
     <value>Napravi Belešku</value>
   </data>
+  <data name="Note" xml:space="preserve">
+    <value>Beleška</value>
+  </data>
+  <data name="Tags" xml:space="preserve">
+    <value>Tagovi</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Naslov</value>
+  </data>
 </root>
